// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/forgetPassword/forgetPassword.test.ts should fail to log in user when email is invalid 1`] = `
Object {
  "errors": Array [
    "Invalid email in 'user.email'. Received 'undefined'",
  ],
  "message": "Unprocessable entity",
}
`;

exports[`/Users/mariuszrajczakowski/Code/rest-api-node-typescript/src/presenter/express/auth/forgetPassword/forgetPassword.test.ts should fail to log in user without input 1`] = `
Object {
  "errors": Array [
    "Missing required value in 'user.email'",
  ],
  "message": "Unprocessable entity",
}
`;
